# stock-screener

./: .gitattributes  .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.github/workflows/: morning_check.yml  nightly.yml
config/: settings.yaml
data_cache/: backtest_results.parquet  features.parquet  prices.parquet  ticker_master.parquet
docs/: 01_requirements_basic_design.md  02_data_design.md  03_backtest_spec.md  04_streamlit_spec.md  05_ai_agent_tasks.md  06_integration_design.md  07_honest_revalidation.md  08_avoidance_overlay.md  09_universe_expansion.md  10_regime_overlay.md  11_product_integration.md  12_ci_ops.md
scripts/: fetch_prices.py  ingest_events.py  morning_check.py  run_avoidance_overlay.py  run_honest_backtest.py  run_pipeline.py  run_regime_overlay.py
src/app/: main.py  pipeline_trigger.py
src/backtest/: engine.py  honest.py
src/data/: config.py  price_downloader.py  release_store.py  ticker_master.py
src/features/: engineer.py
src/ingest/: financing_events.py
src/overlay/: avoidance.py  integration.py  regime.py
src/screening/: screener.py
tests/: test_app.py  test_backtest.py  test_data.py  test_features.py  test_pipeline_trigger.py  test_screening.py
